--- a/index.html
+++ b/index.html
@@ -16,5 +16,14 @@
     <!-- title -->
     <title>Bootstrap</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div
+        class="container h-100 d-flex justify-content-between align-items-center"
+      >
+        <div class="box">logo</div>
+        <div class="box">menu</div>
+      </div>
+    </header>
+  </body>
 </html>
