--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <title>Bootstrap</title>
   </head>
   <body>
+    <!-- header -->
     <header id="header">
       <div
         class="container h-100 d-flex justify-content-between align-items-center"
@@ -25,5 +26,17 @@
         <div class="box">menu</div>
       </div>
     </header>
+    <!-- main -->
+    <main>
+      <!-- hero -->
+      <section id="hero">
+        <div class="container">
+          <img src="./img/avatar.svg" alt="avatar" />
+          <h1>START BOOTSTRAP</h1>
+          <div class="box"></div>
+          <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
