html and css: add portfolio structure

--- a/index.html
+++ b/index.html
@@ -37,6 +37,45 @@
           <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
         </div>
       </section>
+      <!-- portfolio -->
+      <section id="portfolio">
+        <div class="container">
+          <h2>PORTFOLIO</h2>
+          <div class="box"></div>
+          <div class="row">
+            <div class="col-12">
+              <div class="box">
+                <img src="./img/cabin.png" alt="cabin" />
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="box">
+                <img src="./img/cake.png" alt="cake" />
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="box">
+                <img src="./img/circus.png" alt="circus" />
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="box">
+                <img src="img/game.png" alt="game" />
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="box">
+                <img src="img/safe.png" alt="safe" />
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="box">
+                <img src="img/submarine.png" alt="submarine" />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
