--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </section>
       <!-- portfolio -->
       <section id="portfolio">
-        <div class="container">
+        <div class="container-fluid">
           <h2>PORTFOLIO</h2>
           <div class="box"></div>
           <div class="row">
@@ -58,7 +58,7 @@
                 <img src="./img/circus.png" alt="circus" />
               </div>
             </div>
-            <div class="col-12">
+            <div class="col-8">
               <div class="box">
                 <img src="img/game.png" alt="game" />
               </div>
@@ -73,6 +73,32 @@
                 <img src="img/submarine.png" alt="submarine" />
               </div>
             </div>
+          </div>
+        </div>
+      </section>
+      <!-- about -->
+      <section id="about">
+        <h2>ABOUT</h2>
+        <div class="box"></div>
+        <div class="container-fluid">
+          <div class="col-8 m-auto">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+              eligendi similique voluptatum commodi aliquid amet unde culpa
+              molestiae ratione odio labore cumque enim aut pariatur ipsam,
+              laborum facere laudantium iste!
+            </p>
+          </div>
+          <div class="col-8 m-auto">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Reprehenderit deserunt nulla saepe? Temporibus obcaecati cumque
+              modi iure, fugit doloribus impedit delectus nobis incidunt
+              repellendus dignissimos, ducimus inventore officiis nisi minima.
+            </p>
+          </div>
+          <div class="d-flex justify-content-center">
+            <button>Download</button>
           </div>
         </div>
       </section>
