--- a/index.html
+++ b/index.html
@@ -102,6 +102,26 @@
           </div>
         </div>
       </section>
+      <!-- contact -->
+      <section id="contact">
+        <h2>CONTACT ME</h2>
+        <div class="box"></div>
+        <div class="container-fluid">
+          <div class="m-auto">
+            <p class="col-8 m-auto">Name</p>
+            <hr class="col-8 m-auto" />
+            <p class="col-8 m-auto">Email Address</p>
+            <hr class="col-8 m-auto" />
+            <p class="col-8 m-auto">Phone Number</p>
+            <hr class="col-8 m-auto" />
+            <p class="col-8 m-auto">Message</p>
+            <hr class="col-8 m-auto" />
+            <div class="col-8 m-auto">
+              <button>Send</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
