html and css: add footer structure

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="./img/circus.png" alt="circus" />
               </div>
             </div>
-            <div class="col-8">
+            <div class="col-12">
               <div class="box">
                 <img src="img/game.png" alt="game" />
               </div>
@@ -122,6 +122,34 @@
           </div>
         </div>
       </section>
+      <footer id="footer">
+        <div>
+          <div class="container-fluid d-flex flex-column">
+            <div class="box">
+              <p>LOCATION</p>
+              <p>2215 John Daniel Drive Clark, MO 54243</p>
+            </div>
+            <div class="box">
+              <p>AROUND THE WEB</p>
+              <i>facebook</i>
+              <i>google</i>
+              <i>twitter</i>
+              <i>linkedin</i>
+            </div>
+            <div class="box">
+              <p>ABOUT FREELANCER</p>
+              <p>
+                Freelance is a free to use, open source Bootstrap <br />
+                theme created by
+                <a href="#">Strat Bootstrap</a>.
+              </p>
+            </div>
+          </div>
+          <div class="copyright">
+            <p class="text-center">Copyright © Your Website 2019</p>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
