--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- header -->
     <header id="header">
       <div
-        class="container h-100 d-flex justify-content-between align-items-center"
+        class="container-fluid h-100 d-flex justify-content-between align-items-center"
       >
         <div class="box">logo</div>
         <div class="box">menu</div>
@@ -30,7 +30,7 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="container">
+        <div class="container-fluid">
           <img src="./img/avatar.svg" alt="avatar" />
           <h1>START BOOTSTRAP</h1>
           <div class="box"></div>
