--- a/index.html
+++ b/index.html
@@ -43,35 +43,23 @@
           <h2>PORTFOLIO</h2>
           <div class="box"></div>
           <div class="row">
-            <div class="col-12">
-              <div class="box">
-                <img src="./img/cabin.png" alt="cabin" />
-              </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <img src="./img/cabin.png" alt="cabin" />
             </div>
-            <div class="col-12">
-              <div class="box">
-                <img src="./img/cake.png" alt="cake" />
-              </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <img src="./img/cake.png" alt="cake" />
             </div>
-            <div class="col-12">
-              <div class="box">
-                <img src="./img/circus.png" alt="circus" />
-              </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <img src="./img/circus.png" alt="circus" />
             </div>
-            <div class="col-12">
-              <div class="box">
-                <img src="img/game.png" alt="game" />
-              </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <img src="img/game.png" alt="game" />
             </div>
-            <div class="col-12">
-              <div class="box">
-                <img src="img/safe.png" alt="safe" />
-              </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <img src="img/safe.png" alt="safe" />
             </div>
-            <div class="col-12">
-              <div class="box">
-                <img src="img/submarine.png" alt="submarine" />
-              </div>
+            <div class="col-sm-12 col-md-6 col-lg-4">
+              <img src="img/submarine.png" alt="submarine" />
             </div>
           </div>
         </div>
