--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
         class="container-fluid h-100 d-flex justify-content-between align-items-center"
       >
         <div class="box">logo</div>
-        <div class="box">menu</div>
+        <div class="d-flex">
+          <div class="box d-sm-block d-md-none">menu</div>
+          <div class="box d-sm-none d-md-block"><a href="#">PORTFOLIO</a></div>
+          <div class="box d-sm-none d-md-block"><a href="#">ABOUT</a></div>
+          <div class="box d-sm-none d-md-block"><a href="#">CONTACT</a></div>
+        </div>
       </div>
     </header>
     <!-- main -->
