html: edit about section

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       <section id="about">
         <h2>ABOUT</h2>
         <div class="box"></div>
-        <div class="container-fluid">
-          <div class="col-8 m-auto">
+        <div class="container-fluid d-md-flex">
+          <div class="col-sm-8 col-md-5 m-auto">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
               eligendi similique voluptatum commodi aliquid amet unde culpa
@@ -82,7 +82,7 @@
               laborum facere laudantium iste!
             </p>
           </div>
-          <div class="col-8 m-auto">
+          <div class="col-sm-8 col-md-5 m-auto">
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Reprehenderit deserunt nulla saepe? Temporibus obcaecati cumque
@@ -90,9 +90,9 @@
               repellendus dignissimos, ducimus inventore officiis nisi minima.
             </p>
           </div>
-          <div class="d-flex justify-content-center">
-            <button>Download</button>
-          </div>
+        </div>
+        <div class="d-sm-flex justify-content-center">
+          <button>Download</button>
         </div>
       </section>
       <!-- contact -->
