html and css: edit portfolio

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="container-fluid">
+        <div class="container-fluid text-center">
           <img src="./img/avatar.svg" alt="avatar" />
           <h1>START BOOTSTRAP</h1>
           <div class="box"></div>
