--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="container-fluid text-center">
+        <div class="container-fluid text-center py-3">
           <img src="./img/avatar.svg" alt="avatar" />
           <h1>START BOOTSTRAP</h1>
           <div class="box"></div>
@@ -43,11 +43,11 @@
         </div>
       </section>
       <!-- portfolio -->
-      <section id="portfolio">
-        <div class="container-fluid">
+      <section id="portfolio" class="py-3">
+        <div class="container-fluid text-center">
           <h2>PORTFOLIO</h2>
           <div class="box"></div>
-          <div class="row">
+          <div class="row mt-3">
             <div class="col-sm-12 col-md-6 col-lg-4">
               <img src="./img/cabin.png" alt="cabin" />
             </div>
@@ -70,36 +70,38 @@
         </div>
       </section>
       <!-- about -->
-      <section id="about">
+      <section id="about" class="py-3">
         <h2>ABOUT</h2>
         <div class="box"></div>
-        <div class="container-fluid d-md-flex">
-          <div class="col-sm-8 col-md-5 m-auto">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
-              eligendi similique voluptatum commodi aliquid amet unde culpa
-              molestiae ratione odio labore cumque enim aut pariatur ipsam,
-              laborum facere laudantium iste!
-            </p>
+        <div class="container-fluid">
+          <div class="row justify-content-center">
+            <div class="col-sm-8 col-md-5 m-auto">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+                eligendi similique voluptatum commodi aliquid amet unde culpa
+                molestiae ratione odio labore cumque enim aut pariatur ipsam,
+                laborum facere laudantium iste!
+              </p>
+            </div>
+            <div class="col-sm-8 col-md-5 m-auto">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Reprehenderit deserunt nulla saepe? Temporibus obcaecati cumque
+                modi iure, fugit doloribus impedit delectus nobis incidunt
+                repellendus dignissimos, ducimus inventore officiis nisi minima.
+              </p>
+            </div>
+            <div class="d-sm-flex justify-content-center">
+              <button>Download</button>
+            </div>
           </div>
-          <div class="col-sm-8 col-md-5 m-auto">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Reprehenderit deserunt nulla saepe? Temporibus obcaecati cumque
-              modi iure, fugit doloribus impedit delectus nobis incidunt
-              repellendus dignissimos, ducimus inventore officiis nisi minima.
-            </p>
-          </div>
-        </div>
-        <div class="d-sm-flex justify-content-center">
-          <button>Download</button>
         </div>
       </section>
       <!-- contact -->
-      <section id="contact">
+      <section id="contact" class="text-center py-3">
         <h2>CONTACT ME</h2>
         <div class="box"></div>
-        <div class="container-fluid">
+        <div class="container-fluid text-start">
           <div class="m-auto">
             <p class="col-8 m-auto">Name</p>
             <hr class="col-8 m-auto" />
@@ -116,7 +118,7 @@
         </div>
       </section>
       <footer id="footer">
-        <div>
+        <div class="top-footer py-3">
           <div class="container-fluid d-flex flex-column">
             <div class="box">
               <p>LOCATION</p>
@@ -138,7 +140,7 @@
               </p>
             </div>
           </div>
-          <div class="copyright">
+          <div class="copyright py-3">
             <p class="text-center">Copyright © Your Website 2019</p>
           </div>
         </div>
