--- a/index.html
+++ b/index.html
@@ -48,23 +48,23 @@
           <h2>PORTFOLIO</h2>
           <div class="box"></div>
           <div class="row mt-3">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <img src="./img/cabin.png" alt="cabin" />
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <img src="./img/cabin.png" class="rounded-4" alt="cabin" />
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <img src="./img/cake.png" alt="cake" />
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <img src="./img/cake.png" class="rounded-4" alt="cake" />
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <img src="./img/circus.png" alt="circus" />
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <img src="./img/circus.png" class="rounded-4" alt="circus" />
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <img src="img/game.png" alt="game" />
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <img src="img/game.png" class="rounded-4" alt="game" />
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <img src="img/safe.png" alt="safe" />
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <img src="img/safe.png" class="rounded-4" alt="safe" />
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-              <img src="img/submarine.png" alt="submarine" />
+            <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+              <img src="img/submarine.png" class="rounded-4" alt="submarine" />
             </div>
           </div>
         </div>
