--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div
         class="container-fluid h-100 d-flex justify-content-between align-items-center"
       >
-        <div class="box">logo</div>
+        <h4>START BOOTSTRAP</h4>
         <div class="d-flex">
           <div class="box d-sm-block d-md-none">menu</div>
           <div class="box d-sm-none d-md-block"><a href="#">PORTFOLIO</a></div>
