html and css: edit link header

--- a/index.html
+++ b/index.html
@@ -26,16 +26,18 @@
   </head>
   <body>
     <!-- header -->
-    <header id="header">
+    <header id="header" class="text-white">
       <div
         class="container-fluid h-100 d-flex justify-content-between align-items-center"
       >
         <h4>START BOOTSTRAP</h4>
         <div class="d-flex">
-          <div class="box d-sm-block d-md-none">menu</div>
-          <div class="box d-sm-none d-md-block"><a href="#">PORTFOLIO</a></div>
-          <div class="box d-sm-none d-md-block"><a href="#">ABOUT</a></div>
-          <div class="box d-sm-none d-md-block"><a href="#">CONTACT</a></div>
+          <button class="d-sm-block d-md-none px-3 py-2 btn border-white">
+            <i class="fa-solid fa-bars text-white"></i>
+          </button>
+          <a href="#" class="d-sm-none d-md-block text-white">PORTFOLIO</a>
+          <a href="#" class="d-sm-none d-md-block ms-5 text-white">ABOUT</a>
+          <a href="#" class="d-sm-none d-md-block ms-5 text-white">CONTACT</a>
         </div>
       </div>
     </header>
