--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- header -->
     <header id="header" class="text-white">
       <div
-        class="container-fluid h-100 d-flex justify-content-between align-items-center"
+        class="container h-100 d-flex justify-content-between align-items-center"
       >
         <h4>START BOOTSTRAP</h4>
         <div class="d-flex">
@@ -45,7 +45,7 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="container-fluid text-center py-3">
+        <div class="container text-center py-3">
           <img src="./img/avatar.svg" alt="avatar" />
           <h1>START BOOTSTRAP</h1>
           <div class="box"></div>
@@ -54,7 +54,7 @@
       </section>
       <!-- portfolio -->
       <section id="portfolio" class="py-3">
-        <div class="container-fluid text-center">
+        <div class="container text-center">
           <h2>PORTFOLIO</h2>
           <div class="box"></div>
           <div class="row mt-3">
@@ -111,7 +111,7 @@
       <section id="contact" class="text-center py-3">
         <h2>CONTACT ME</h2>
         <div class="box"></div>
-        <div class="container-fluid text-start">
+        <div class="container text-start">
           <div class="m-auto">
             <p class="col-8 m-auto">Name</p>
             <hr class="col-8 m-auto" />
@@ -129,7 +129,7 @@
       </section>
       <footer id="footer">
         <div class="top-footer py-3">
-          <div class="container-fluid d-flex flex-column">
+          <div class="container d-flex flex-column">
             <div class="box">
               <p>LOCATION</p>
               <p>2215 John Daniel Drive Clark, MO 54243</p>
