--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="container text-center py-3">
+        <div class="container text-center py-3 text-white">
           <img src="./img/avatar.svg" alt="avatar" />
           <h1>START BOOTSTRAP</h1>
           <div class="box"></div>
