--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         </div>
       </section>
       <!-- about -->
-      <section id="about" class="py-3">
+      <section id="about" class="py-3 text-white">
         <h2>ABOUT</h2>
         <div class="box"></div>
-        <div class="container-fluid">
+        <div class="container">
           <div class="row justify-content-center">
-            <div class="col-sm-8 col-md-5 m-auto">
+            <div class="col-sm-8 col-md-5 m-auto me-md-0">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
                 eligendi similique voluptatum commodi aliquid amet unde culpa
@@ -93,7 +93,7 @@
                 laborum facere laudantium iste!
               </p>
             </div>
-            <div class="col-sm-8 col-md-5 m-auto">
+            <div class="col-sm-8 col-md-5 m-auto ms-md-0">
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Reprehenderit deserunt nulla saepe? Temporibus obcaecati cumque
@@ -102,7 +102,9 @@
               </p>
             </div>
             <div class="d-sm-flex justify-content-center">
-              <button>Download</button>
+              <button class="btn border-white text-white">
+                <i class="fa-solid fa-download me-1"></i>Download
+              </button>
             </div>
           </div>
         </div>
