--- a/index.html
+++ b/index.html
@@ -130,25 +130,38 @@
         </div>
       </section>
       <footer id="footer">
-        <div class="top-footer py-3">
-          <div class="container d-flex flex-column">
-            <div class="box">
+        <div class="top-footer py-3 text-white">
+          <div class="container d-flex flex-column flex-md-row text-center">
+            <div>
               <p>LOCATION</p>
               <p>2215 John Daniel Drive Clark, MO 54243</p>
             </div>
-            <div class="box">
+            <div>
               <p>AROUND THE WEB</p>
-              <i>facebook</i>
-              <i>google</i>
-              <i>twitter</i>
-              <i>linkedin</i>
+              <button class="btn border-white">
+                <a href="#"
+                  ><i class="fa-brands fa-facebook-f text-white"></i
+                ></a>
+              </button>
+              <button class="btn border-white">
+                <a href="#"
+                  ><i class="fa-brands fa-google-plus-g text-white"></i
+                ></a>
+              </button>
+              <button class="btn border-white">
+                <a href="#"><i class="fa-brands fa-twitter text-white"></i></a>
+              </button>
+              <button class="btn border-white">
+                <a href="#"
+                  ><i class="fa-brands fa-linkedin-in text-white"></i
+                ></a>
+              </button>
             </div>
-            <div class="box">
+            <div>
               <p>ABOUT FREELANCER</p>
               <p>
-                Freelance is a free to use, open source Bootstrap <br />
-                theme created by
-                <a href="#">Strat Bootstrap</a>.
+                Freelance is a free to use, open source Bootstrap theme created
+                by <a href="#">Strat Bootstrap</a>.
               </p>
             </div>
           </div>
