--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
     <main>
       <!-- hero -->
       <section id="hero">
-        <div class="container text-center py-3 text-white">
+        <div class="container text-center py-5 text-white">
           <img src="./img/avatar.svg" alt="avatar" />
           <h1>START BOOTSTRAP</h1>
           <div class="box"></div>
-          <p>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
+          <h3>GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</h3>
         </div>
       </section>
       <!-- portfolio -->
-      <section id="portfolio" class="py-3">
+      <section id="portfolio" class="py-5">
         <div class="container text-center">
           <h2>PORTFOLIO</h2>
           <div class="box"></div>
@@ -80,7 +80,7 @@
         </div>
       </section>
       <!-- about -->
-      <section id="about" class="py-3 text-white">
+      <section id="about" class="py-5 text-white">
         <h2>ABOUT</h2>
         <div class="box"></div>
         <div class="container">
@@ -110,7 +110,7 @@
         </div>
       </section>
       <!-- contact -->
-      <section id="contact" class="text-center py-3">
+      <section id="contact" class="text-center py-5">
         <h2>CONTACT ME</h2>
         <div class="box"></div>
         <div class="container text-start">
@@ -129,15 +129,18 @@
           </div>
         </div>
       </section>
+      <!-- footer -->
       <footer id="footer">
-        <div class="top-footer py-3 text-white">
-          <div class="container d-flex flex-column flex-md-row text-center">
+        <div class="top-footer py-5 text-white">
+          <div
+            class="container d-flex flex-sm-column flex-md-row justify-content-md-between text-center"
+          >
             <div>
-              <p>LOCATION</p>
+              <p class="m-0">LOCATION</p>
               <p>2215 John Daniel Drive Clark, MO 54243</p>
             </div>
             <div>
-              <p>AROUND THE WEB</p>
+              <p class="m-0">AROUND THE WEB</p>
               <button class="btn border-white">
                 <a href="#"
                   ><i class="fa-brands fa-facebook-f text-white"></i
@@ -158,16 +161,16 @@
               </button>
             </div>
             <div>
-              <p>ABOUT FREELANCER</p>
+              <p class="mb-0 mt-3">ABOUT FREELANCER</p>
               <p>
-                Freelance is a free to use, open source Bootstrap theme created
-                by <a href="#">Strat Bootstrap</a>.
+                Freelance is a free to use, open source <br />
+                Bootstrap theme created by <a href="#">Strat Bootstrap</a>.
               </p>
             </div>
           </div>
-          <div class="copyright py-3">
-            <p class="text-center">Copyright © Your Website 2019</p>
-          </div>
+        </div>
+        <div class="copyright py-3">
+          <p class="text-center text-white">Copyright © Your Website 2019</p>
         </div>
       </footer>
     </main>
